--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Run tests with Gradle Wrapper
-        run: ./gradlew testDebugUnitTest
+        run: ./gradlew check
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
