--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,6 +62,7 @@ startup-runtime = "1.2.0"
 supabase-bom = "3.0.3"
 kalendar = "1.3.2"
 calendar = "2.6.1"
+chucker = "4.1.0"
 
 [libraries]
 # androidx
@@ -181,6 +182,10 @@ ksp-gradle-plugin = { group = "com.google.devtools.ksp", name = "com.google.devt
 # saket
 saket-swipe = { module = "me.saket.swipe:swipe", version.ref = "saket-swipe" }
 saket-cascade = { module = "me.saket.cascade:cascade-compose", version.ref = "saket-cascade" }
+
+# chucker
+chucker-debug = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
+chucker-release = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chucker" }
 
 # others
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
