enhance(landing) : updates landing screen colors & adds splash screen

--- a/modules-app/streeek/src/main/AndroidManifest.xml
+++ b/modules-app/streeek/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name="com.bizilabs.streeek.lib.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Streeek">
+            android:theme="@style/Theme.Streeek.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
