--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ androidx-lifecycle-runtime-ktx = "2.8.7"
 androidx-appcompat = "1.7.0"
 androidx-palette = "1.0.0"
 androidx-security-crypto = "1.0.0"
+androidx-paging = "3.3.2"
 
 # compose
 compose-bom = "2024.11.00"
@@ -77,6 +78,10 @@ androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "androidx-security-crypto" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidx-splash-screen" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-runtime-ktx" }
+
+# androidx-paging
+androidx-paging-runtime = {module = "androidx.paging:paging-runtime", version.ref= "androidx-paging"}
+androidx-paging-compose = {module = "androidx.paging:paging-compose", version.ref= "androidx-paging"}
 
 # koin
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
