--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -65,6 +65,7 @@ kalendar = "1.3.2"
 calendar = "2.6.1"
 chucker = "4.1.0"
 foundation-android = "1.7.5"
+ktlint = "12.1.2"
 
 [libraries]
 # androidx
@@ -215,6 +216,7 @@ firebase-performance = { id = "com.google.firebase.firebase-perf", version.ref =
 google-services = { id = "com.google.gms.google-services", version.ref = "gradle-plugin-google-services" }
 realm = { id = "io.realm.kotlin", version.ref = "realm" }
 kotlin-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
 [bundles]
 android = [
