--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,5 @@
 name: Build Gradle project
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -13,17 +10,25 @@ jobs:
     steps:
       - name: Checkout project sources
         uses: actions/checkout@v2
+
       - name: Create local.properties
         run: echo "${{secrets.LOCAL_PROPERTIES }}" > $GITHUB_WORKSPACE/local.properties
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: 'gradle'
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
       - name: Run tests with Gradle Wrapper
         run: ./gradlew check
+
+      - name: Run lint checks with Gradle Wrapper
+        run: ./gradlew ktlintCheck
+
       - name: Run build with Gradle Wrapper
         run: ./gradlew build
