--- a/.github/workflows/firebase-release.yml
+++ b/.github/workflows/firebase-release.yml
@@ -1,4 +1,4 @@
-name: Release APK to Firebase App Distribution
+name: Release Beta APK to Firebase App Distribution
 
 on:
   push:
@@ -32,25 +32,19 @@ jobs:
         uses: gradle/gradle-build-action@v3
 
       - name: Assemble APK
-        run: ./gradlew assembleRelease
-
-      - name: Setup build tool version variable
-        shell: bash
-        run: |
-          BUILD_TOOL_VERSION=$(ls /usr/local/lib/android/sdk/build-tools/ | tail -n 1)
-          echo "BUILD_TOOL_VERSION=$BUILD_TOOL_VERSION" >> $GITHUB_ENV
-          echo Last build tool version is: $BUILD_TOOL_VERSION
+        run: ./gradlew assembleBeta
 
       - name: Sign Release APK
         uses: r0adkll/sign-android-release@v1
         with:
-          releaseDirectory: modules-app/streeek/build/outputs/apk/release
+          releaseDirectory: modules-app/streeek/build/outputs/apk/beta
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
-        env:
-          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
+
+      - name: Check APK name
+        run: ls modules-app/streeek/build/outputs/apk/beta
 
       - name: Deploy to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
@@ -58,4 +52,4 @@ jobs:
           appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           groups: internal
-          file: modules-app/streeek/build/outputs/apk/release/streeek-release.apk
+          file: modules-app/streeek/build/outputs/apk/beta/streeek-release.apk
