--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -66,6 +66,7 @@ calendar = "2.6.1"
 chucker = "4.1.0"
 foundation-android = "1.7.5"
 ktlint = "12.1.2"
+confetti = "2.0.5"
 
 [libraries]
 # androidx
@@ -204,6 +205,7 @@ realm = { module = "io.realm.kotlin:library-base", version.ref = "realm" }
 kalendar = { module = "com.himanshoe:kalendar", version.ref = "kalendar" }
 calendar = { module = "com.kizitonwose.calendar:compose-multiplatform", version.ref = "calendar" }
 androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundation-android" }
+confetti = { module = "nl.dionsegijn:konfetti-compose", version.ref = "confetti"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradle-plugin-android" }
