--- a/.github/workflows/firebase-release.yml
+++ b/.github/workflows/firebase-release.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
 
+      - name: Set Version Code
+        run: |
+          echo "VERSION_CODE=$(git rev-list --count HEAD)" >> $GITHUB_ENV
+
       - name: Assemble APK
         run: ./gradlew assembleBeta
 
