--- a/.github/workflows/firebase-release.yml
+++ b/.github/workflows/firebase-release.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           echo "VERSION_CODE=$(git rev-list --count HEAD)" >> $GITHUB_ENV
           echo "VERSION_NAME=$(git rev-list --count HEAD)" >> $GITHUB_ENV
+          echo version code is: $VERSION_CODE and version name is: $VERSION_NAME
 
       - name: Assemble APK
         run: ./gradlew assembleBeta
@@ -43,7 +44,6 @@ jobs:
         run: |
           BUILD_TOOL_VERSION=$(ls /usr/local/lib/android/sdk/build-tools/ | tail -n 1)
           echo "BUILD_TOOL_VERSION=$BUILD_TOOL_VERSION" >> $GITHUB_ENV
-          echo Last build tool version is: $BUILD_TOOL_VERSION
 
       - name: Sign Release APK
         uses: r0adkll/sign-android-release@v1
