--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'gradle'
 
       - name: Setup Gradle
-      - uses: gradle/actions/setup-gradle@v4
+        uses: gradle/actions/setup-gradle@v4
         with:
           cache-read-only: false
 
