--- a/.github/workflows/firebase-release.yml
+++ b/.github/workflows/firebase-release.yml
@@ -37,9 +37,8 @@ jobs:
       - name: Set Version Code and Version Name
         run: |
           VERSION_CODE=$(git rev-list --count HEAD)
-          VERSION_NAME=${{ github.event.release.name }}
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
-          echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
+          echo "VERSION_NAME=$VERSION_CODE" >> $GITHUB_ENV
           echo version code is: $VERSION_CODE and version name is: $VERSION_NAME
 
       - name: Assemble APK
