add step to auto increment version code for playstore releases

--- a/.github/workflows/playstore-release.yml
+++ b/.github/workflows/playstore-release.yml
@@ -43,11 +43,12 @@ jobs:
       - name: Set Version Code
         run: |
           version_code=$(cat  ./modules-app/streeek/VERSION)
+          echo "Curent Version Code is: $version_code"
           ((version_code++))
           echo "VERSION_CODE=$version_code" >> $GITHUB_ENV
           echo "$version_code" > ./modules-app/streeek/VERSION)
           
-          echo "Version Code is: $version_code"
+          echo "New Version Code is: $version_code"
 
       - name: Bundle AAB
         run: ./gradlew bundleRelease
