--- a/.github/workflows/playstore-release.yml
+++ b/.github/workflows/playstore-release.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Set Version Code and Commit
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           version_code=$(cat ./modules-app/streeek/VERSION)
           echo "Current Version Code is: $version_code"
