--- a/.github/workflows/playstore-release.yml
+++ b/.github/workflows/playstore-release.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Set Version Name
         run: |
-          version_name=${{ github.event.release.name }}
+          version_name=${{ github.event.release.tag_name }}
           echo "VERSION_NAME=$version_name" >> $GITHUB_ENV
           echo "version name is: $version_name"
 
