--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,10 +1,9 @@
 name: Merge PR
 
 on:
-#  pull_request_review:
-#    types:
-#      - submitted
-  pull_request:
+  pull_request_review:
+    types:
+      - submitted
 
 jobs:
   merge:
