Implement Subscriptions for Global, User and Issues Events

--- a/modules-features/notifications/src/main/AndroidManifest.xml
+++ b/modules-features/notifications/src/main/AndroidManifest.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <application>
+
+        <service
+            android:name="com.bizilabs.streeek.feature.push.services.AppFirebaseMessagingService"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+    </application>
+
+
 </manifest>
