updates level screen and add gamelike ui

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -71,6 +71,7 @@ confetti = "2.0.5"
 updater = "2.1.0"
 rich-text-editor = "1.0.0-rc10"
 firebase-messaging-ktx = "24.1.0"
+firebase-database = "21.0.0"
 
 [libraries]
 # androidx
@@ -214,6 +215,7 @@ confetti = { module = "nl.dionsegijn:konfetti-compose", version.ref = "confetti"
 updater = { module = "com.google.android.play:app-update", version.ref = "updater"}
 richtexteditor = { module = "com.mohamedrejeb.richeditor:richeditor-compose", version.ref = "rich-text-editor"}
 firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebase-messaging-ktx" }
+google-firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebase-database" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradle-plugin-android" }
