--- a/modules-features/reminders/src/main/AndroidManifest.xml
+++ b/modules-features/reminders/src/main/AndroidManifest.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"/>
+
     <application>
-        <receiver android:name=".receivers.ReminderReceiver"/>
+        <receiver android:name=".receivers.ReminderReceiver" />
+        <service
+            android:name=".services.ReminderService"
+            android:exported="false"
+            android:foregroundServiceType="specialUse"
+            />
     </application>
 </manifest>
