--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -73,24 +73,21 @@ jobs:
           # Ensure PR is not a draft
           is_pr_draft
           
-          while true; do
-            APPROVAL_COUNT=$(get_approval_count)
-            echo "Approvals: $APPROVAL_COUNT / $REQUIRED_APPROVALS"
+          APPROVAL_COUNT=$(get_approval_count)
+          echo "Approvals: $APPROVAL_COUNT / $REQUIRED_APPROVALS"
           
-            if [ "$APPROVAL_COUNT" -ge "$REQUIRED_APPROVALS" ]; then
-              while are_workflows_running; do
-                sleep 30
-              done
+          if [ "$APPROVAL_COUNT" -lt "$REQUIRED_APPROVALS" ]; then
+            echo "Not enough approvals to merge. Exiting."
+            exit 1
+          fi
           
-              echo "Merging Pull Request #$PR_NUMBER"
-              curl -X PUT -s -H "Authorization: Bearer $GITHUB_TOKEN" \
-                -H "Accept: application/vnd.github+json" \
-                -H "X-GitHub-Api-Version: 2022-11-28" \
-                "https://api.github.com/repos/$OWNER/$REPO/pulls/$PR_NUMBER/merge" \
-                -d '{"merge_method": "rebase"}'
-              break
-            else
-              echo "Not enough approvals to merge. Retrying in 30 seconds..."
-              sleep 30
-            fi
+          while are_workflows_running; do
+            sleep 30
           done
+          
+          echo "Merging Pull Request #$PR_NUMBER"
+          curl -X PUT -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/$OWNER/$REPO/pulls/$PR_NUMBER/merge" \
+            -d '{"merge_method": "rebase"}'
