--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ androidx-splash-screen = "1.0.1"
 androidx-core-ktx = "1.15.0"
 androidx-compose-material = "1.7.6"
 androidx-work-manager = "2.10.0"
-androidx-room = "2.7.0-alpha01"
+androidx-room = "2.7.0-rc01"
 androidx-datastore = "1.1.3"
 androidx-lifecycle-runtime-ktx = "2.8.7"
 androidx-appcompat = "1.7.0"
